# audiocontrol-director-telnet-py

./: .gitignore  README.md  pyproject.toml
src/audiocontrol_director_telnet/: __init__.py  telnet_client.py
