[project]
name = "audiocontrol_director_telnet"
version = "0.3.0"
authors = [
    {name = "Philip Flesher", email = "philip@fleshers.org"},
]
description = "Telnet client to interface with the AudioControl Director M6400/M6800"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9"
]
dependencies = [
    "telnetlib3==2.0.3"
]